<resources>
    <string name="app_name">Island Weather</string>

    <string name="label_settings">Settings</string>
    <string name="label_alerts">Alerts</string>
    <string name="label_about">About</string>
    <string name="label_web_content">Period Graph</string>

    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_alerts">Alerts</string>
    <string name="menu_action_about">About</string>

    <string name="action_panel_1">Favs</string>
    <string name="action_panel_2">List</string>
    <string name="action_panel_3">Map</string>
    <string name="action_panel_refresh_button">Refresh</string>

    <string name="condition_unavailable">unavailable</string>
    <string name="condition_time_unavailable">Could not contact station.</string>
    <string name="unit_unavailable">  </string>
    <string name="conditions_toggle_favourite"></string>
    <string name="conditions_map_bridge_text">go to</string>
    <string name="conditions_web_details_button">details</string>

    <string name="conditions_temperature">Temperature</string>
    <string name="conditions_average_wind">Average Wind</string>
    <string name="conditions_rain">Rain</string>
    <string name="conditions_pressure">Pressure</string>
    <string name="conditions_uv">UV Index</string>
    <string name="conditions_insolation">Insolation</string>
    <string name="conditions_humidity">Humidity</string>

    <string name="google_maps_key">AIzaSyAwtKHuov6BDkMU19Yg5TlcFxD8_a1qIX0</string>

    <string name="web_image_err">Unfortunately the corresponding graph could not be retrieved from the server.\n\nPlease try again later.</string>

    <string name="about_network_title">Network Info</string>
    <string name="about_network_about_details"><u>Full Details</u></string>
    <string name="about_network_variables"><u>Variables we measure</u></string>

    <string name="about_blurb">
        The school based weather station network founded by Edward Wiebe and Andrew Weaver at UVic.\n\nThe android app was developed by Marty Wiebe and is open source!\n\nThis is a beta, so there will be bugs! You might also experience poor performance on older devices. Apologies for any inconvenience.
    </string>
    <string name="about_blurb_land">
        The school based weather station network founded by Edward Wiebe and Andrew Weaver at UVic.\n\nThe android app was developed by Marty Wiebe and is open source!\n\nThis is a beta, so there will be bugs! You might also experience poor performance on older devices. Apologies for any inconvenience.
    </string>

    <string name="about_bugs_header">Find a bug? Want a feature?</string>
    <string name="about_contact_desc">Send reports/requests to:</string>
    <string name="about_git_fork_desc">Or fork the repo yourself:</string>

    <string name="about_connect_title">Connect</string>
    <string name="about_connect_website">Website: victoriaweather.ca</string>
    <string name="about_connect_email">Email: weather@uvic.ca</string>
    <string name="about_connect_facebook">Facebook: facebook.com/victoriaweather</string>
    <string name="about_connect_twitter">Twitter @vanisleweather</string>

    <string name="about_contact_email">vancouverislandweather@gmail.com</string>
    <string name="about_repo_url">github.com/DodgySmalls/victoriaweather</string>
    <string name="about_version">Island Weather (BETA) Version 0.1</string>

    <string name="infowindow_button">details</string>

    <string name="not_yet_implemented">(feature coming soon)</string>
    <!-- PREFERENCE-->
    <string name="pref_locationEnabled">Use my location</string>
    <string name="pref_summary_location">Allows finding closest station and other features.</string>

    <string name="pref_mapFastInfo">Show conditions on map popups</string>

    <string name="pref_mapColourfulMarkers">Colourful map markers</string>
    <string name="pref_summary_mapColourfulMarkers">Changes the colours of map markers by station temperature.</string>
    <string name="pref_syncConnectionType">Network Access</string>
    <string name="pref_default_syncConnectionType">wifi</string>
    <string name="pref_summary_syncConnectionType">Restricts data usage.</string>
</resources>
